# android-webrtz

./: BUILD.gn  README.md  common_types.cc  common_types.h  presubmit_test.py
api/: datachannelinterface.h  dtmfsenderinterface.h  jsep.cc  (+40 more)
sdk/android/: AndroidManifest.xml  BUILD.gn  README
sdk/android/api/org/webrtz/: AudioProcessingFactory.java  AudioSource.java  AudioTrack.java  CallSessionFileRotatingLogSink.java  Camera1Capturer.java  Camera1Enumerator.java  Camera2Capturer.java  Camera2Enumerator.java  CameraEnumerationAndroid.java  CameraEnumerator.java  CameraVideoCapturer.java  DataChannel.java  DefaultVideoDecoderFactory.java  DefaultVideoEncoderFactory.java  DtmfSender.java  EglBase.java  EglRenderer.java  EncodedImage.java  FecControllerFactoryFactoryInterface.java  FileVideoCapturer.java  GlRectDrawer.java  GlShader.java  GlTextureFrameBuffer.java  GlUtil.java  HardwareVideoDecoderFactory.java  HardwareVideoEncoderFactory.java  IceCandidate.java  JavaI420Buffer.java  MediaCodecVideoDecoder.java  MediaCodecVideoEncoder.java  MediaConstraints.java  MediaSource.java  MediaStream.java  MediaStreamTrack.java  Metrics.java  NativeLibraryLoader.java  NativePeerConnectionFactory.java  NetworkMonitor.java  NetworkMonitorAutoDetect.java  PeerConnection.java  (+38 more)
sdk/android/api/org/webrtz/audio/: AudioDeviceModule.java  JavaAudioDeviceModule.java  LegacyAudioDeviceModule.java
sdk/android/instrumentationtests/: AndroidManifest.xml
sdk/android/instrumentationtests/src/org/webrtz/: Camera1CapturerUsingByteBufferTest.java  Camera1CapturerUsingTextureTest.java  Camera2CapturerTest.java  CameraVideoCapturerTestFixtures.java  DefaultVideoEncoderFactoryTest.java  EglRendererTest.java  FileVideoCapturerTest.java  GlRectDrawerTest.java  HardwareVideoDecoderTest.java  HardwareVideoEncoderTest.java  MediaCodecVideoEncoderTest.java  NetworkMonitorTest.java  PeerConnectionFactoryTest.java  PeerConnectionTest.java  RendererCommonTest.java  SurfaceTextureHelperTest.java  SurfaceViewRendererOnMeasureTest.java  VideoFileRendererTest.java  WebRtcJniBootTest.java  YuvHelperTest.java
sdk/android/native_api/audio_device_module/: audio_device_android.cc  audio_device_android.h
sdk/android/native_api/base/: init.cc  init.h  networkmonitor.cc  networkmonitor.h
sdk/android/native_api/codecs/: wrapper.cc  wrapper.h
sdk/android/native_api/jni/: class_loader.cc  class_loader.h  java_types.cc  java_types.h  jvm.cc  jvm.h  scoped_java_ref.h
sdk/android/native_api/peerconnection/: peerconnectionfactory.cc  peerconnectionfactory.h
sdk/android/native_api/video/: wrapper.cc  wrapper.h
sdk/android/native_unittests/: java_types_unittest.cc  test_jni_onload.cc
sdk/android/native_unittests/org/webrtz/: JavaTypesTestHelper.java  PeerConnectionFactoryInitializationHelper.java
sdk/android/native_unittests/peerconnection/: peerconnectionfactory_unittest.cc
sdk/android/src/java/org/webrtz/: AndroidVideoTrackSourceObserver.java  BaseBitrateAdjuster.java  BitrateAdjuster.java  CalledByNative.java  CalledByNativeUnchecked.java  Camera1Session.java  Camera2Session.java  CameraCapturer.java  CameraSession.java  DynamicBitrateAdjuster.java  EglBase10.java  EglBase14.java  Empty.java  FramerateBitrateAdjuster.java  HardwareVideoDecoder.java  HardwareVideoEncoder.java  Histogram.java  JNINamespace.java  JniCommon.java  JniHelper.java  MediaCodecUtils.java  NV12Buffer.java  NV21Buffer.java  NativeClassQualifiedName.java  NativeLibrary.java  TextureBufferImpl.java  VP8Decoder.java  VP8Encoder.java  VP9Decoder.java  VP9Encoder.java  VideoCodecType.java  VideoDecoderWrapper.java  VideoEncoderWrapper.java  WebRtcClassLoader.java  WrappedNativeI420Buffer.java  WrappedNativeVideoDecoder.java  WrappedNativeVideoEncoder.java
sdk/android/src/java/org/webrtz/audio/: VolumeLogger.java  WebRtcAudioEffects.java  WebRtcAudioManager.java  WebRtcAudioRecord.java  WebRtcAudioTrack.java  WebRtcAudioUtils.java
sdk/android/src/jni/: androidhistogram.cc  androidmediacodeccommon.h  androidmediadecoder.cc  androidmediadecoder_jni.h  androidmediaencoder.cc  androidmediaencoder_jni.h  androidmetrics.cc  androidnetworkmonitor.cc  androidnetworkmonitor.h  androidvideotracksource.cc  androidvideotracksource.h  class_loader.h  classreferenceholder.h  encodedimage.cc  encodedimage.h  hardwarevideoencoderfactory.cc  jni_common.cc  jni_generator_helper.cc  jni_generator_helper.h  jni_helpers.cc  jni_helpers.h  jni_onload.cc  jvm.cc  jvm.h  nv12buffer.cc  nv21buffer.cc  surfacetexturehelper.cc  surfacetexturehelper.h  video_renderer.cc  videocodecinfo.cc  videocodecinfo.h  videocodecstatus.cc  videocodecstatus.h  videodecoderfactorywrapper.cc  videodecoderfactorywrapper.h  videodecoderfallback.cc  videodecoderwrapper.cc  videodecoderwrapper.h  videoencoderfactorywrapper.cc  videoencoderfactorywrapper.h  (+15 more)
sdk/android/src/jni/audio_device/: aaudio_player.cc  aaudio_player.h  aaudio_recorder.cc  aaudio_recorder.h  aaudio_wrapper.cc  aaudio_wrapper.h  audio_common.h  audio_device_module.cc  audio_device_module.h  audio_record_jni.cc  audio_record_jni.h  audio_track_jni.cc  audio_track_jni.h  java_audio_device_module.cc  opensles_common.cc  opensles_common.h  opensles_player.cc  opensles_player.h  opensles_recorder.cc  opensles_recorder.h
sdk/android/src/jni/pc/: audio.cc  audio.h  audiotrack.cc  callsessionfilerotatinglogsink.cc  datachannel.cc  datachannel.h  dtmfsender.cc  icecandidate.cc  icecandidate.h  logging.cc  media.cc  media.h  mediaconstraints.cc  mediaconstraints.h  mediasource.cc  mediastream.cc  mediastream.h  mediastreamtrack.cc  mediastreamtrack.h  null_audio.cc  null_media.cc  null_video.cc  ownedfactoryandthreads.cc  ownedfactoryandthreads.h  peerconnection.cc  peerconnection.h  peerconnectionfactory.cc  peerconnectionfactory.h  rtcstatscollectorcallbackwrapper.cc  rtcstatscollectorcallbackwrapper.h  rtpparameters.cc  rtpparameters.h  rtpreceiver.cc  rtpreceiver.h  rtpsender.cc  rtpsender.h  rtptransceiver.cc  rtptransceiver.h  sdpobserver.cc  sdpobserver.h  (+8 more)
sdk/android/tests/src/org/webrtz/: CameraEnumerationTest.java
(+2966 files in other folders)
